# folio

./: .gitignore  CMakeLists.txt  LICENSE  ModulePlanner.cpp  README.md  build.sh  module_test
folioedit/: CMakeLists.txt
folioedit/cli/: main.cpp
folioedit/include/folioedit/: Anchor.hpp  Archive.hpp  Custody.hpp  Envelope.hpp  Format.hpp  Identity.hpp  Passphrase.hpp  Seal.hpp  Timestamp.hpp  Vocabulary.hpp
folioedit/src/: Anchor.cpp  Archive.cpp  Custody.cpp  Format.cpp  Identity_openssl.cpp  KeyHex.cpp  Passphrase.cpp  Seal_openssl.cpp  Timestamp_openssl.cpp  Vocabulary.cpp
folioedit/tests/: TEST_anchor.cpp  TEST_archive.cpp  TEST_custody.cpp  TEST_format.cpp  TEST_identity.cpp  TEST_kdf.cpp  TEST_keyhex.cpp  TEST_passphrase.cpp  TEST_scaffold.cpp  TEST_seal.cpp  TEST_timestamp.cpp  TEST_vocab.cpp
include/: AnnotationReportDialog.hpp  Application.hpp  BackupManager.hpp  BarcodeDialog.hpp  BarcodeGenerator.hpp  ColorHexEntry.hpp  ColorPicker.hpp  ColorPickerRecents.hpp  CompileFormat.hpp  CompileFormatDialog.hpp  CompileFormatIO.hpp  CustomMindMap.hpp  CustomMindMapCanvas.hpp  DiffView.hpp  DocumentModel.hpp  Editor.hpp  EditorHtmlSerializer.hpp  EditorRuler.hpp  EditorTabBar.hpp  Editor_internal.hpp  ExportDialog.hpp  ExportScan.hpp  Exporter.hpp  FocusWindow.hpp  FolioLog.hpp  FolioPrefs.hpp  FormPlan.hpp  Gallery.hpp  GallerySurface.hpp  Hyphenator.hpp  Iid.hpp  ImageImport.hpp  ImageNormalize.hpp  ImagePool.hpp  ImportDialog.hpp  Importer.hpp  Inspector.hpp  InterchangeLedger.hpp  Journal.hpp  JournalLog.hpp  (+59 more)
include/color/: Color.hpp
resources/: resources.xml
src/: AnnotationReportDialog.cpp  Application.cpp  BackupManager.cpp  BarcodeDialog.cpp  BarcodeGenerator.cpp  ColorPicker.cpp  ColorPickerRecents.cpp  CompileFormatDialog.cpp  CompileFormatIO.cpp  CustomMindMap.cpp  CustomMindMapCanvas.cpp  DiffView.cpp  DocumentModel.cpp  Editor.cpp  EditorHtmlSerializer.cpp  EditorRuler.cpp  EditorTabBar.cpp  Editor_build.cpp  Editor_format.cpp  Editor_journal.cpp  Editor_text.cpp  Editor_views.cpp  ExportDialog.cpp  Exporter.cpp  FocusWindow.cpp  FolioPrefs.cpp  Gallery.cpp  GallerySurface.cpp  Hyphenator.cpp  Iid.cpp  ImageImport.cpp  ImageNormalize.cpp  ImagePool.cpp  ImportDialog.cpp  Importer.cpp  Inspector.cpp  InterchangeLedger.cpp  Journal.cpp  JournalLog.cpp  JournalSurface.cpp  (+47 more)
src/color/: Color.cpp
tests/: TEST_annotation_source.cpp  TEST_interchange_ledger.cpp  TEST_replace_html.cpp  TEST_shortcuts.cpp  TEST_snapshot_diff.cpp  TEST_timeline_cascade.cpp  TEST_timeline_chrono_edit.cpp  TEST_timeline_chrono_geom.cpp  TEST_timeline_cluster.cpp  TEST_timeline_resources.cpp  TEST_timeline_threads.cpp  TEST_timeline_zoom.cpp  character_template_test.cpp  clone_template_test.cpp  cmm_s52_test.cpp  cmm_test.cpp  create_from_template_s40_test.cpp  formconfig_s36_test.cpp  formplan_test.cpp  heading_sections_s39_test.cpp  journal_codec_test.cpp  journal_log_test.cpp  journal_test  journal_test.cpp  module_library_test.cpp  module_test.cpp  move_node_test.cpp  object_test.cpp  objectedit_test.cpp  objectstore_s35_test.cpp  objectstore_test.cpp  pattern_test.cpp  projection_test.cpp  relation_list_s37_test.cpp  relation_test.cpp  s42_reference_projection_test.cpp  template_node_projection_s38_test.cpp  templateedit_test.cpp  test_bundle  test_bundle_assets.cpp  (+13 more)
